[package]
name = "swd_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp-idf-hal = { version = "0.41", optional = true, default-features = false }
esp-idf-sys = { version = "0.33", default-features = false }
